{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 9,
  "lineage": "417e98d7-7987-1519-796b-538a2a9f9a12",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/networkInterfaces/sample-nic",
            "internal_domain_name_suffix": "ttz24rjh1y0upag5shkw0soyee.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "sample-internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/publicIPAddresses/vm-public-ip",
                "subnet_id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/virtualNetworks/sample-network/subnets/sample-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "sample-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rm-sample"
          },
          "dependencies": [
            "azurerm_public_ip.vm_ip",
            "azurerm_resource_group.rm",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/networkSecurityGroups/sample-nsg",
            "location": "westeurope",
            "name": "sample-nsg",
            "resource_group_name": "rm-sample",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/networkSecurityGroups/sample-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "sample-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rm-sample",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/publicIPAddresses/vm-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.114.245.51",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-public-ip",
            "resource_group_name": "rm-sample",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/virtualNetworks/sample-network/subnets/sample-subnet",
            "name": "sample-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rm-sample",
            "virtual_network_name": "sample-network"
          },
          "dependencies": [
            "azurerm_resource_group.rm",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "45cff39c-de27-4735-80df-91d56d49d824",
            "id": "/subscriptions/3b84aa1f-e80e-4ddc-9d77-4ebc9ae731fa/resourceGroups/rm-sample/providers/Microsoft.Network/virtualNetworks/sample-network",
            "location": "westeurope",
            "name": "sample-network",
            "resource_group_name": "rm-sample"
          },
          "dependencies": [
            "azurerm_resource_group.rm"
          ]
        }
      ]
    }
  ]
}